--- a/cell03/ex01/baloon.html
+++ b/cell03/ex01/baloon.html
@@ -7,7 +7,7 @@
         #balloon {
 			border: 1px snow;
 			size: 200px;
-			color: red;
+			color: #FF0000;
 			border: 90%;
         }
     </style>
